# deployer-api

./: .pre-commit-config.yaml  README.md  captain-definition  deployer.sqlite  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
deployer/: __init__.py  __main__.py  conftest.py  logging.py  piccolo_conf.py  settings.py  taskiq.py
deployer/db/: app_conf.py
deployer/db/dao/: __init__.py  dummy_dao.py
deployer/db/models/: __init__.py
deployer/services/: __init__.py
deployer/tests/: __init__.py  test_dummy.py
deployer/web/: __init__.py  application.py  lifetime.py
deployer/web/api/: __init__.py  router.py
deployer/web/api/docs/: __init__.py
deployer/web/api/dummy/: __init__.py  views.py
deployer/web/api/echo/: __init__.py  views.py
deployer/web/api/monitoring/: __init__.py
