[tool.poetry]
name = "deployer"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = { version = "^0.20.0", extras = ["standard"] }
pydantic = {version = "^1.10.4", extras = ["dotenv"]}
yarl = "^1.8.2"
ujson = "^5.7.0"
piccolo = {extras = ["sqlite"], version = "^0.109.0"}
aiofiles = "^22.1.0"
httptools = "^0.5.0"
prometheus-client = "^0.16.0"
prometheus-fastapi-instrumentator = "5.9.1"
sentry-sdk = "^1.14.0"
opentelemetry-api = "^1.15.0"
opentelemetry-sdk = "^1.15.0"
opentelemetry-exporter-otlp = "^1.15.0"
opentelemetry-instrumentation = "^0.36b0"
opentelemetry-instrumentation-fastapi = "^0.36b0"
loguru = "^0.6.0"
hcloud = "^1.18.2"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.23.3"
taskiq = "^0"
taskiq-fastapi = "^0"
pyzmq = "^25.0.2"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["deployer",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "DEPLOYER_ENVIRONMENT=pytest",
    "DEPLOYER_DB_BASE=deployer_test",
    "PICCOLO_CONF=deployer.piccolo_conf",
    "DEPLOYER_SENTRY_DSN=",
]

[fastapi-template.options]
project_name = "deployer"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "none"
enable_migrations = "True"
enable_taskiq = "True"
enable_kube = "None"
kube_name = "deployer"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "True"
traefik_labels = "None"
add_dummy = "True"
orm = "piccolo"
self_hosted_swagger = "True"
prometheus_enabled = "True"
sentry_enabled = "True"
otlp_enabled = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
